--- a/engine/pre-alpha/19 (texture tab)/index.html
+++ b/engine/pre-alpha/19 (texture tab)/index.html
@@ -1603,110 +1603,105 @@
 					var interval;
 
 				//	Vectors.
-
 					watch( editor.center, function( key, action, value, oldValue ){
-					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture.center[ key ] = editor.center[ key ];
+					//	clearTimeout( interval );
 					});
-
 					watch( editor.offset, function( key, action, value, oldValue ){
-					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture.offset[ key ] = editor.offset[ key ];
+					//	clearTimeout( interval );
 					});
-
 					watch( editor.repeat, function( key, action, value, oldValue ){
-					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture.repeat[ key ] = editor.repeat[ key ];
+					//	clearTimeout( interval );
 					});
 
 				//	Nubers.
-
 					watch( editor, "anisotropy", function( key, action, value, oldValue ){
-					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture[ key ] = editor[ key ];
+					//	clearTimeout( interval );
 					});
-
 					watch( editor, "rotation", function( key, action, value, oldValue ){
-					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture[ key ] = editor[ key ];
+					//	clearTimeout( interval );
 					});
 
 				//	Strings.
-
 					watch( editor, "name", function( key, action, value, oldValue ){
-					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture[ key ] = editor[ key ];
+					//	clearTimeout( interval );
 					});
-
 					watch( editor, "uuid", function( key, action, value, oldValue ){
-					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture[ key ] = editor[ key ];
+					//	clearTimeout( interval );
 					});
 
 				//	Constants.
-
 					watch( editor, "format", function( key, action, value, oldValue ){
-					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture[ key ] = editor[ key ];
+					//	clearTimeout( interval );
 					});
-
 					watch( editor, "mapping", function( key, action, value, oldValue ){
-					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture[ key ] = editor[ key ];
+					//	clearTimeout( interval );
 					});
-
 					watch( editor, "wrapS", function( key, action, value, oldValue ){
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture[ key ] = editor[ key ];
 					//	clearTimeout( interval );
 					});
-
 					watch( editor, "wrapT", function( key, action, value, oldValue ){
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
 					//	clearTimeout( interval );
 					});
-
 					watch( editor, "minFilter", function( key, action, value, oldValue ){
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
 					//	clearTimeout( interval );
 					});
-
 					watch( editor, "magFilter", function( key, action, value, oldValue ){
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
 					//	clearTimeout( interval );
 					});
-
 					watch( editor, "type", function( key, action, value, oldValue ){
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture[ key ] = editor[ key ];
 					//	clearTimeout( interval );
 					});
 
 				//	Boolean.
-
 					watch( editor, "flipY", function( key, action, value, oldValue ){
 					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
 					});
-
 					watch( editor, "premultiplyAlpha", function( key, action, value, oldValue ){
-					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture[ key ] = editor[ key ];
+					//	clearTimeout( interval );
 					});
-
 					watch( editor, "matrixAutoUpdate", function( key, action, value, oldValue ){
-					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture[ key ] = editor[ key ];
+					//	clearTimeout( interval );
 					});
-
 					watch( editor, "generateMipmaps", function( key, action, value, oldValue ){
-					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						texture[ key ] = editor[ key ];
+					//	clearTimeout( interval );
 					});
 
 				//	Image.
-
 					watch( editor.image, function( key, action, value, oldValue ){
-					//	clearTimeout( interval );
 						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+					//	clearTimeout( interval );
 					});
 
 				})( editor );
