--- a/engine/editor/index.html
+++ b/engine/editor/index.html
@@ -308,8 +308,8 @@
 
 		//	Viewport tab.
 
-			TabUI.Texture.role.classList.remove("active");
-			TabUI.Texture.tab.classList.remove("in","active");
+		//	TabUI.Texture.role.classList.remove("active");
+		//	TabUI.Texture.tab.classList.remove("in","active");
 			TabUI.Viewport.role.classList.add("active");
 			TabUI.Viewport.tab.classList.add("in","active");
 
