--- a/engine/pre-alpha/20 (material tab)/index.html
+++ b/engine/pre-alpha/20 (material tab)/index.html
@@ -1220,32 +1220,27 @@
 						entity:null, // material.id,
 						button:null, // current button.
 						key:null,    // editor key,
-						vector: new THREE.Vector2(1,1), // editor[key].
+						value:null,  // new THREE.Vector2(1,1), // editor[key].x
 					};
 
-				//	Will trigger when clicking has finished (and a value has changed).
-					watch( watchValue.vector, ["x","y"], function( prop, action, value, oldValue ){
-						clearTimeout( interval );
-						interval = setTimeout(function(){
-							debugMode && console.log({ event:"on click end", "new value":value, "old value":oldValue });
+				//	Will trigger when clicking has finished (and value has changed).
+					watch( watchValue, "value", function( prop, action, value, oldValue ){
+						debugMode && console.log({ event:"on click end", "new value":value, "old value":oldValue });
 
-							if ( watchValue.button == null ) return;
-							if ( entity_droplist.value === "" ) return;
+						if ( watchValue.button == null ) return;
+						if ( entity_droplist.value === "" ) return;
 
-						//	Add event listener.
-							watchValue.button && watchValue.button.addEventListener( "mousedown", onWatchValue ); // important!
+					//	Add event listener.
+						watchValue.button && watchValue.button.addEventListener( "mousedown", onWatchValue ); // important!
 
-						//	Add to undo.
-							entity_droplist.value && addtoUndo(); // add to undo.
-							debugMode && console.log( "undo:", undo.length, "redo:", redo.length );
-						}, 100);
+					//	Add to undo.
+						entity_droplist.value && addtoUndo(); // add to undo.
+						debugMode && console.log( "undo:", undo.length, "redo:", redo.length );
 					});
 
 				//	keep first, ignore next events.
 					increase_x.addEventListener( "mousedown", onWatchValue );
-					increase_y.addEventListener( "mousedown", onWatchValue );
 					decrease_x.addEventListener( "mousedown", onWatchValue );
-					decrease_y.addEventListener( "mousedown", onWatchValue );
 
 					function onWatchValue(){
 
@@ -1256,14 +1251,12 @@
 						watchValue.button = button;
 						watchValue.key = vector_droplist.value;
 						watchValue.entity = parseInt(entity_droplist.value);
-						watchValue.vector.copy( editor[vector_droplist.value] ); // editor[key]
+						watchValue.value = editor[vector_droplist.value].x; // editor[key].x
 						button.removeEventListener( "mousedown", onWatchValue ); // important!
 					}
 
 					increase_x.addEventListener( "mousedown", onMouseDown );
-					increase_y.addEventListener( "mousedown", onMouseDown );
 					decrease_x.addEventListener( "mousedown", onMouseDown );
-					decrease_y.addEventListener( "mousedown", onMouseDown );
 
 					window.addEventListener( "mouseup", function (){
 					//	debugMode && console.log( "on MouseUp:", interval );
@@ -1271,9 +1264,7 @@
 					});
 
 					increase_x.addEventListener( "click", onMouseClick );
-					increase_y.addEventListener( "click", onMouseClick );
 					decrease_x.addEventListener( "click", onMouseClick );
-					decrease_y.addEventListener( "click", onMouseClick );
 
 					function onMouseDown(){
 
@@ -1283,8 +1274,7 @@
 
 					//	disabled on mouse down.
 
-						if ( vector_droplist.value !== "normalScale" || texture_droplist.value !== "normalMap" ) 
-							return [ vector_x.value, vector_y.value ] = ["",""];
+						if ( vector_droplist.value === "" ) return;
 
 					//	enabled on mouse down.
 
@@ -1294,30 +1284,17 @@
 						interval = setTimeout( function update() {
 
 							var key = vector_droplist.value;
+							var step = 1/100, min = -100, max = 100;
 
-							if ( key ) (function(){
+							var value = Number(editor[ key ].x); // get value from editor.
+							if ( button === increase_x ) value = THREE.Math.clamp( value+step, min, max );
+							if ( button === decrease_x ) value = THREE.Math.clamp( value-step, min, max );
+							vector_x.value = ( editor[ key ].x = round(value, 2) ).toFixed(2);
 
-								var step = 1/100, min = -100, max = 100;
+							var dt = clock.getDelta();
+							interval = setTimeout( update, dt );
+						//	debugMode && console.log( "on Update:", interval );
 
-								if ( button === increase_x || button === decrease_x ) {
-									var value = Number(editor[ key ].x); // get value from editor.
-									if ( button === increase_x ) value = THREE.Math.clamp( value+step, min, max );
-									if ( button === decrease_x ) value = THREE.Math.clamp( value-step, min, max );
-									vector_x.value = ( editor[ key ].x = round(value, 2) ).toFixed(2);
-								}
-
-								else if ( button === increase_y || button === decrease_y ) {
-									var value = Number(editor[ key ].y); // get value from editor.
-									if ( button === increase_y ) value = THREE.Math.clamp( value+step, min, max );
-									if ( button === decrease_y ) value = THREE.Math.clamp( value-step, min, max );
-									vector_y.value = ( editor[ key ].y = round(value, 2) ).toFixed(2);
-								}
-
-								var dt = clock.getDelta();
-								interval = setTimeout( update, dt );
-							//	debugMode && console.log( "on Update:", interval );
-
-							})();
 
 						}, 500);
 
@@ -1331,47 +1308,154 @@
 
 					//	disabled on mouse click.
 
-						if ( vector_droplist.value !== "normalScale" || texture_droplist.value !== "normalMap" )
-							return [ vector_x.value, vector_y.value ] = ["",""];
+						if ( vector_droplist.value === "" ) return;
 
 					//	enabled on mouse click.
 
 						var button = this;
 						var key = vector_droplist.value;
+						var step = 1/100, min = -100, max = 100;
 
-						if ( key && key === "normalScale" && editor[key] && editor[key].isVector2 ) (function(){
-
-							var step = 1/100, min = -100, max = 100;
-
-							if ( button === increase_x || button === decrease_x ) {
-								var value = Number(editor[ key ].x); // get value from editor.
-								if ( button === increase_x ) value = THREE.Math.clamp( value+step, min, max );
-								if ( button === decrease_x ) value = THREE.Math.clamp( value-step, min, max );
-								vector_x.value = ( editor[ key ].x = round(value, 2) ).toFixed(2);
-							}
-
-							else if ( button === increase_y || button === decrease_y ) {
-								var value = Number(editor[ key ].y); // get value from editor.
-								if ( button === increase_y ) value = THREE.Math.clamp( value+step, min, max );
-								if ( button === decrease_y ) value = THREE.Math.clamp( value-step, min, max );
-								vector_y.value = ( editor[ key ].y = round(value, 2) ).toFixed(2);
-							}
-
-						//	call watcher to add undo.
-							interval = setTimeout( function(){
-								watchValue.vector.copy( editor[key] );
-							}, 250);
-
-						})();
-
-						else [ vector_x.value, vector_y.value ] = ["",""];
+						var value = Number(editor[ key ].x); // get value from editor.
+						if ( button === increase_x ) value = THREE.Math.clamp( value+step, min, max );
+						if ( button === decrease_x ) value = THREE.Math.clamp( value-step, min, max );
+						vector_x.value = ( editor[ key ].x = round(value, 2) ).toFixed(2);
 
 						debugMode && console.log( "on Mouse Click:", interval );
+
+					//	call watcher to add undo.
+						interval = setTimeout( function(){
+							watchValue.value = editor[key].x;
+						}, 250);
 
 					}
 
 				})();
 
+				(function(){
+
+					var interval;
+
+					var watchValue = {
+						entity:null, // material.id,
+						button:null, // current button.
+						key:null,    // editor key,
+						value:null,  // editor[key].y
+					};
+
+				//	Will trigger when clicking has finished (and value has changed).
+					watch( watchValue, "value", function( prop, action, value, oldValue ){
+						debugMode && console.log({ event:"on click end", "new value":value, "old value":oldValue });
+
+						if ( watchValue.button == null ) return;
+						if ( entity_droplist.value === "" ) return;
+
+						//	Add event listener.
+						watchValue.button && watchValue.button.addEventListener( "mousedown", onWatchValue ); // important!
+
+						//	Add to undo.
+						entity_droplist.value && addtoUndo(); // add to undo.
+						debugMode && console.log( "undo:", undo.length, "redo:", redo.length );
+					});
+
+				//	keep first, ignore next events.
+					increase_y.addEventListener( "mousedown", onWatchValue );
+					decrease_y.addEventListener( "mousedown", onWatchValue );
+
+					function onWatchValue(){
+
+						var button = this;
+						if ( entity_droplist.value === "" ) return;
+						if ( vector_droplist.value === "" ) return;
+
+						watchValue.button = button;
+						watchValue.key = vector_droplist.value;
+						watchValue.entity = parseInt(entity_droplist.value);
+						watchValue.value = editor[vector_droplist.value].y; // editor[key].y
+						button.removeEventListener( "mousedown", onWatchValue ); // important!
+					}
+
+					increase_y.addEventListener( "mousedown", onMouseDown );
+					decrease_y.addEventListener( "mousedown", onMouseDown );
+
+					window.addEventListener( "mouseup", function (){
+					//	debugMode && console.log( "on MouseUp:", interval );
+						clearTimeout( interval ); // important!
+					});
+
+					increase_y.addEventListener( "click", onMouseClick );
+					decrease_y.addEventListener( "click", onMouseClick );
+
+					function onMouseDown(){
+
+						clearTimeout( interval ); // important!
+
+						if ( entity_droplist.value === "" ) return;
+
+					//	disabled on mouse down.
+
+						if ( vector_droplist.value === "" ) return;
+						//	return [ vector_x.value, vector_y.value ] = ["",""];
+
+					//	enabled on mouse down.
+
+						var button = this;
+						var clock = new THREE.Clock();
+
+						interval = setTimeout( function update() {
+
+							var key = vector_droplist.value;
+							var step = 1/100, min = -100, max = 100;
+
+							var value = Number(editor[ key ].y); // get value from editor.
+							if ( button === increase_y ) value = THREE.Math.clamp( value+step, min, max );
+							if ( button === decrease_y ) value = THREE.Math.clamp( value-step, min, max );
+							vector_y.value = ( editor[ key ].y = round(value, 2) ).toFixed(2);
+
+							var dt = clock.getDelta();
+							interval = setTimeout( update, dt );
+						//	debugMode && console.log( "on Update:", interval );
+
+						}, 500);
+
+					}
+
+					function onMouseClick(){
+
+						clearTimeout( interval ); // important!
+
+						if ( entity_droplist.value === "" ) return;
+
+					//	disabled on mouse click.
+
+						if ( vector_droplist.value === "" ) return;
+						//	return [ vector_x.value, vector_y.value ] = ["",""];
+
+					//	enabled on mouse click.
+
+						var button = this;
+						var key = vector_droplist.value;
+						var step = 1/100, min = -100, max = 100;
+
+						var value = Number(editor[ key ].y); // get value from editor.
+						if ( button === increase_y ) value = THREE.Math.clamp( value+step, min, max );
+						if ( button === decrease_y ) value = THREE.Math.clamp( value-step, min, max );
+						vector_y.value = ( editor[ key ].y = round(value, 2) ).toFixed(2);
+
+						debugMode && console.log( "on Mouse Click:", interval );
+
+					//	call watcher to add undo.
+						interval = setTimeout( function(){
+							watchValue.value = editor[key].y;
+						}, 250);
+
+					}
+
+				})();
+
+
+
+/*
 				(function(){
 
 					var interval;
@@ -1399,6 +1483,7 @@
 
 						//	Add event listener.
 							watchValue.button && watchValue.button.addEventListener( "mousedown", onWatchValue ); // important!
+							watchValue.button && console.log( "onWatchValue eventListener added:", watchValue.button );
 
 						//	Add to undo.
 							entity_droplist.value && addtoUndo(); // add to undo.
@@ -1415,6 +1500,7 @@
 					decrease_b.addEventListener( "mousedown", onWatchValue );
 
 					function onWatchValue(){
+						console.log( "onWatchValue mousedown event!");
 
 						var button = this;
 						if ( entity_droplist.value === "" ) return;
@@ -1425,6 +1511,7 @@
 						watchValue.entity = parseInt(entity_droplist.value);
 						watchValue.color.copy( editor[color_droplist.value] ); // editor[key]
 						button.removeEventListener( "mousedown", onWatchValue ); // important!
+						debugMode && console.log( "onWatchValue eventListener removed:", button );
 					}
 
 					increase_r.addEventListener( "mousedown", onMouseDown );
@@ -1556,7 +1643,7 @@
 					}
 
 				})();
-
+*/
 
 
 
@@ -1576,24 +1663,37 @@
 						debugMode && console.log({item:"droplist",event:event,"material":material});
 					});
 
+				//	Vector.
+					watch( editor.normalScale, ["x","y"], function( key, action, value, oldValue ){
+					//	debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+						if (material && material.normalScale) material.normalScale[ key ] = editor.normalScale[ key ];
+					//	clearTimeout( interval );
+					});
+
 				//	Colors.
 					watch( editor.color, ["r","g","b"], function( key, action, value, oldValue ){
-						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+					//	debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
 						if (material && material.color) material.color[ key ] = editor.color[ key ];
 					//	clearTimeout( interval );
 					});
 					watch( editor.emissive, ["r","g","b"], function( key, action, value, oldValue ){
-						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+					//	debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
 						if (material && material.emissive) material.emissive[ key ] = editor.emissive[ key ];
 					//	clearTimeout( interval );
 					});
 					watch( editor.specular, ["r","g","b"], function( key, action, value, oldValue ){
-						debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
+					//	debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
 						if (material && material.specular) material.specular[ key ] = editor.specular[ key ];
 					//	clearTimeout( interval );
 					});
 
-				})( editor.reset() ); // important!
+
+
+
+
+
+
+				})( editor.reset() ); // important! (reset initializes editor)
 
 				return editor; // important!
 
@@ -1605,6 +1705,11 @@
 		<script src="/ecs/engine/editor/ViewportTab.js"></script>
 
 		<script>
+
+			TabUI.Material.role.classList.add("active");
+			TabUI.Material.tab.classList.add("in","active");
+
+		//
 
 			localPlayer.controller.movementSpeed = 10;
 
