--- a/engine/pre-alpha/20 (material tab)/index.html
+++ b/engine/pre-alpha/20 (material tab)/index.html
@@ -581,7 +581,6 @@
 						callWatchers( color_droplist, "onchange", "change", color_droplist.value );
 						callWatchers( vector_droplist, "onchange", "change", vector_droplist.value );
 						callWatchers( texture_droplist, "onchange", "change", texture_droplist.value );
-
 					});
 
 				})();
@@ -842,7 +841,7 @@
 
 				})();
 
-			//	mouse inputs.
+			//	key/value mouse inputs.
 
 				(function(){
 
@@ -1207,6 +1206,8 @@
 
 				})();
 
+			//	vector mouse inputs.
+
 				(function(){
 
 					var interval;
@@ -1220,7 +1221,7 @@
 						entity:null, // material.id,
 						button:null, // current button.
 						key:null,    // editor key,
-						value:null,  // new THREE.Vector2(1,1), // editor[key].x
+						value:1,     // editor[key].x
 					};
 
 				//	Will trigger when clicking has finished (and value has changed).
@@ -1340,7 +1341,7 @@
 						entity:null, // material.id,
 						button:null, // current button.
 						key:null,    // editor key,
-						value:null,  // editor[key].y
+						value:1,    // editor[key].y
 					};
 
 				//	Will trigger when clicking has finished (and value has changed).
@@ -1350,10 +1351,10 @@
 						if ( watchValue.button == null ) return;
 						if ( entity_droplist.value === "" ) return;
 
-						//	Add event listener.
+					//	Add event listener.
 						watchValue.button && watchValue.button.addEventListener( "mousedown", onWatchValue ); // important!
 
-						//	Add to undo.
+					//	Add to undo.
 						entity_droplist.value && addtoUndo(); // add to undo.
 						debugMode && console.log( "undo:", undo.length, "redo:", redo.length );
 					});
@@ -1452,6 +1453,385 @@
 					}
 
 				})();
+
+			//	color mouse inputs.
+
+				(function(){
+
+					var interval;
+
+				//	First "mousedown" event (mousedown, onWatchValue ) eventListener, sets the values in 
+				//	the "watchValue" object and the ( mousedown, onWatchValue ) eventListener is removed.
+				//	Last "click" event ( click, onMouseClick ) eventListener, changes the watchValue.value 
+				//	and calls the watcher, which restore the (mousedown, onWatchValue ) eventListener.
+
+					var watchValue = {
+						entity:null, // material.id,
+						button:null, // current button.
+						key:null,    // editor key (color),
+						value:1,     // editor[key].r
+					};
+
+				//	Will trigger when clicking has finished (and value has changed).
+					watch( watchValue, "value", function( prop, action, value, oldValue ){
+						debugMode && console.log({ event:"on click end", "new value":value, "old value":oldValue });
+
+						if ( watchValue.button == null ) return;
+						if ( entity_droplist.value === "" ) return;
+
+					//	Add event listener.
+						watchValue.button && watchValue.button.addEventListener( "mousedown", onWatchValue ); // important!
+
+					//	Add to undo.
+						entity_droplist.value && addtoUndo(); // add to undo.
+						debugMode && console.log( "undo:", undo.length, "redo:", redo.length );
+					});
+
+				//	keep first, ignore next events.
+					increase_r.addEventListener( "mousedown", onWatchValue );
+					decrease_r.addEventListener( "mousedown", onWatchValue );
+
+					function onWatchValue(){
+
+						var button = this;
+						if ( entity_droplist.value === "" ) return;
+						if ( color_droplist.value  === "" ) return;
+
+						watchValue.button = button;
+						watchValue.key = color_droplist.value;
+						watchValue.entity = parseInt(entity_droplist.value); // material.id,
+						watchValue.value = editor[color_droplist.value].r;   // editor[key].r
+						button.removeEventListener( "mousedown", onWatchValue ); // important!
+					}
+
+					increase_r.addEventListener( "mousedown", onMouseDown );
+					decrease_r.addEventListener( "mousedown", onMouseDown );
+
+					window.addEventListener( "mouseup", function (){
+					//	debugMode && console.log( "on MouseUp:", interval );
+						clearTimeout( interval ); // important!
+					});
+
+					increase_r.addEventListener( "click", onMouseClick );
+					decrease_r.addEventListener( "click", onMouseClick );
+
+					function onMouseDown(){
+
+						clearTimeout( interval ); // important!
+
+						if ( entity_droplist.value === "" ) return;
+
+					//	disabled on mouse down.
+
+						if ( color_droplist.value === "" ) return;
+
+					//	enabled on mouse down.
+
+						var button = this;
+						var clock = new THREE.Clock();
+
+						interval = setTimeout( function update() {
+
+							var key = color_droplist.value;
+							var min = 0, max = 1, step = 1/255;
+
+							var value = Number(editor[ key ].r); // get value from editor.
+							if ( button === increase_r ) value = THREE.Math.clamp( value+step, min, max );
+							if ( button === decrease_r ) value = THREE.Math.clamp( value-step, min, max );
+							color_r.value = parseInt( 255 * ( editor[ key ].r = value ));
+
+							var dt = clock.getDelta();
+							interval = setTimeout( update, dt );
+						//	debugMode && console.log( "on Update:", interval );
+
+						}, 500);
+
+					}
+
+					function onMouseClick(){
+
+						clearTimeout( interval ); // important!
+
+						if ( entity_droplist.value === "" ) return;
+
+					//	disabled on mouse click.
+
+						if ( color_droplist.value === "" ) return;
+
+					//	enabled on mouse click.
+
+						var button = this;
+						var key = color_droplist.value;
+						var min = 0, max = 1, step = 1/255;
+
+						var value = Number(editor[ key ].r); // get value from editor.
+						if ( button === increase_r ) value = THREE.Math.clamp( value+step, min, max );
+						if ( button === decrease_r ) value = THREE.Math.clamp( value-step, min, max );
+						color_r.value = parseInt( 255 * ( editor[ key ].r = value ));
+
+						debugMode && console.log( "on Mouse Click:", interval );
+
+					//	call watcher to add undo.
+						interval = setTimeout( function(){
+							watchValue.value = editor[key].r;
+						}, 250);
+
+					}
+
+				})();
+
+				(function(){
+
+					var interval;
+
+					var watchValue = {
+						entity:null, // material.id,
+						button:null, // current button.
+						key:null,    // editor key (color),
+						value:1,     // editor[key].g
+					};
+
+				//	Will trigger when clicking has finished (and value has changed).
+					watch( watchValue, "value", function( prop, action, value, oldValue ){
+						debugMode && console.log({ event:"on click end", "new value":value, "old value":oldValue });
+
+						if ( watchValue.button == null ) return;
+						if ( entity_droplist.value === "" ) return;
+
+					//	Add event listener.
+						watchValue.button && watchValue.button.addEventListener( "mousedown", onWatchValue ); // important!
+
+					//	Add to undo.
+						entity_droplist.value && addtoUndo(); // add to undo.
+						debugMode && console.log( "undo:", undo.length, "redo:", redo.length );
+					});
+
+				//	keep first, ignore next events.
+					increase_g.addEventListener( "mousedown", onWatchValue );
+					decrease_g.addEventListener( "mousedown", onWatchValue );
+
+					function onWatchValue(){
+
+						var button = this;
+						if ( entity_droplist.value === "" ) return;
+						if ( color_droplist.value  === "" ) return;
+
+						watchValue.button = button;
+						watchValue.key = color_droplist.value;
+						watchValue.entity = parseInt(entity_droplist.value); // material.id,
+						watchValue.value = editor[color_droplist.value].g;   // editor[key].g
+						button.removeEventListener( "mousedown", onWatchValue ); // important!
+					}
+
+					increase_g.addEventListener( "mousedown", onMouseDown );
+					decrease_g.addEventListener( "mousedown", onMouseDown );
+
+					window.addEventListener( "mouseup", function (){
+					//	debugMode && console.log( "on MouseUp:", interval );
+						clearTimeout( interval ); // important!
+					});
+
+					increase_g.addEventListener( "click", onMouseClick );
+					decrease_g.addEventListener( "click", onMouseClick );
+
+					function onMouseDown(){
+
+						clearTimeout( interval ); // important!
+
+						if ( entity_droplist.value === "" ) return;
+
+					//	disabled on mouse down.
+
+						if ( color_droplist.value === "" ) return;
+
+					//	enabled on mouse down.
+
+						var button = this;
+						var clock = new THREE.Clock();
+
+						interval = setTimeout( function update() {
+
+							var key = color_droplist.value;
+							var min = 0, max = 1, step = 1/255;
+
+							var value = Number(editor[ key ].g); // get value from editor.
+							if ( button === increase_g ) value = THREE.Math.clamp( value+step, min, max );
+							if ( button === decrease_g ) value = THREE.Math.clamp( value-step, min, max );
+							color_g.value = parseInt( 255 * ( editor[ key ].g = value ));
+
+							var dt = clock.getDelta();
+							interval = setTimeout( update, dt );
+						//	debugMode && console.log( "on Update:", interval );
+
+						}, 500);
+
+					}
+
+					function onMouseClick(){
+
+						clearTimeout( interval ); // important!
+
+						if ( entity_droplist.value === "" ) return;
+
+					//	disabled on mouse click.
+
+						if ( color_droplist.value === "" ) return;
+
+					//	enabled on mouse click.
+
+						var button = this;
+						var key = color_droplist.value;
+						var min = 0, max = 1, step = 1/255;
+
+						var value = Number(editor[ key ].g); // get value from editor.
+						if ( button === increase_g ) value = THREE.Math.clamp( value+step, min, max );
+						if ( button === decrease_g ) value = THREE.Math.clamp( value-step, min, max );
+						color_g.value = parseInt( 255 * ( editor[ key ].g = value ));
+
+						debugMode && console.log( "on Mouse Click:", interval );
+
+					//	call watcher to add undo.
+						interval = setTimeout( function(){
+							watchValue.value = editor[key].g;
+						}, 250);
+
+					}
+
+				})();
+
+				(function(){
+
+					var interval;
+
+					var watchValue = {
+						entity:null, // material.id,
+						button:null, // current button.
+						key:null,    // editor key (color),
+						value:1,     // editor[key].b
+					};
+
+				//	Will trigger when clicking has finished (and value has changed).
+					watch( watchValue, "value", function( prop, action, value, oldValue ){
+						debugMode && console.log({ event:"on click end", "new value":value, "old value":oldValue });
+
+						if ( watchValue.button == null ) return;
+						if ( entity_droplist.value === "" ) return;
+
+					//	Add event listener.
+						watchValue.button && watchValue.button.addEventListener( "mousedown", onWatchValue ); // important!
+
+					//	Add to undo.
+						entity_droplist.value && addtoUndo(); // add to undo.
+						debugMode && console.log( "undo:", undo.length, "redo:", redo.length );
+					});
+
+				//	keep first, ignore next events.
+					increase_b.addEventListener( "mousedown", onWatchValue );
+					decrease_b.addEventListener( "mousedown", onWatchValue );
+
+					function onWatchValue(){
+
+						var button = this;
+						if ( entity_droplist.value === "" ) return;
+						if ( color_droplist.value  === "" ) return;
+
+						watchValue.button = button;
+						watchValue.key = color_droplist.value;
+						watchValue.entity = parseInt(entity_droplist.value); // material.id,
+						watchValue.value = editor[color_droplist.value].b;   // editor[key].b
+						button.removeEventListener( "mousedown", onWatchValue ); // important!
+					}
+
+					increase_b.addEventListener( "mousedown", onMouseDown );
+					decrease_b.addEventListener( "mousedown", onMouseDown );
+
+					window.addEventListener( "mouseup", function (){
+					//	debugMode && console.log( "on MouseUp:", interval );
+						clearTimeout( interval ); // important!
+					});
+
+					increase_b.addEventListener( "click", onMouseClick );
+					decrease_b.addEventListener( "click", onMouseClick );
+
+					function onMouseDown(){
+
+						clearTimeout( interval ); // important!
+
+						if ( entity_droplist.value === "" ) return;
+
+					//	disabled on mouse down.
+
+						if ( color_droplist.value === "" ) return;
+
+					//	enabled on mouse down.
+
+						var button = this;
+						var clock = new THREE.Clock();
+
+						interval = setTimeout( function update() {
+
+							var key = color_droplist.value;
+							var min = 0, max = 1, step = 1/255;
+
+							var value = Number(editor[ key ].b); // get value from editor.
+							if ( button === increase_b ) value = THREE.Math.clamp( value+step, min, max );
+							if ( button === decrease_b ) value = THREE.Math.clamp( value-step, min, max );
+							color_b.value = parseInt( 255 * ( editor[ key ].b = value ));
+
+							var dt = clock.getDelta();
+							interval = setTimeout( update, dt );
+						//	debugMode && console.log( "on Update:", interval );
+
+						}, 500);
+
+					}
+
+					function onMouseClick(){
+
+						clearTimeout( interval ); // important!
+
+						if ( entity_droplist.value === "" ) return;
+
+					//	disabled on mouse click.
+
+						if ( color_droplist.value === "" ) return;
+
+					//	enabled on mouse click.
+
+						var button = this;
+						var key = color_droplist.value;
+						var min = 0, max = 1, step = 1/255;
+
+						var value = Number(editor[ key ].b); // get value from editor.
+						if ( button === increase_b ) value = THREE.Math.clamp( value+step, min, max );
+						if ( button === decrease_b ) value = THREE.Math.clamp( value-step, min, max );
+						color_b.value = parseInt( 255 * ( editor[ key ].b = value ));
+
+						debugMode && console.log( "on Mouse Click:", interval );
+
+					//	call watcher to add undo.
+						interval = setTimeout( function(){
+							watchValue.value = editor[key].b;
+						}, 250);
+
+					}
+
+				})();
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -1659,33 +2039,35 @@
 					var interval;
 
 					watch( entity_droplist, "onchange", function( property, event, value ){
-						material = material_entities.getMaterialById( value ); // id.
+						material = material_entities.getMaterialById( value ); // material.id.
 						debugMode && console.log({item:"droplist",event:event,"material":material});
 					});
-
+					
 				//	Vector.
-					watch( editor.normalScale, ["x","y"], function( key, action, value, oldValue ){
-					//	debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
-						if (material && material.normalScale) material.normalScale[ key ] = editor.normalScale[ key ];
+					watch( editor.normalScale, ["x","y"], function( v, action, value ){
+					//	debugMode && console.log("editor:",{"key":v,"action":action,"value":value});
+						if (material && material.normalScale) material.normalScale[v] = editor.normalScale[v];
 					//	clearTimeout( interval );
 					});
 
 				//	Colors.
-					watch( editor.color, ["r","g","b"], function( key, action, value, oldValue ){
-					//	debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
-						if (material && material.color) material.color[ key ] = editor.color[ key ];
+					watch( editor.color, ["r","g","b"], function( c, action, value ){
+					//	debugMode && console.log("editor:",{"key":c,"action":action,"value":value});
+						if (material && material.color) material.color[c] = editor.color[c];
 					//	clearTimeout( interval );
 					});
-					watch( editor.emissive, ["r","g","b"], function( key, action, value, oldValue ){
-					//	debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
-						if (material && material.emissive) material.emissive[ key ] = editor.emissive[ key ];
+					watch( editor.emissive, ["r","g","b"], function( c, action, value ){
+					//	debugMode && console.log("editor:",{"key":c,"action":action,"value":value});
+						if (material && material.emissive) material.emissive[c] = editor.emissive[c];
 					//	clearTimeout( interval );
 					});
-					watch( editor.specular, ["r","g","b"], function( key, action, value, oldValue ){
-					//	debugMode && console.log("editor:",{"key":key,"action":action,"value":value});
-						if (material && material.specular) material.specular[ key ] = editor.specular[ key ];
+					watch( editor.specular, ["r","g","b"], function( c, action, value ){
+					//	debugMode && console.log("editor:",{"key":c,"action":action,"value":value});
+						if (material && material.specular) material.specular[c] = editor.specular[c];
 					//	clearTimeout( interval );
 					});
+
+				//	Values.
 
 
 
